--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/site.css
@@ -35,7 +35,7 @@ nav {
     display: block;
     background-color: #637988;
     border-radius: 50px;
-    background-image: url("/Images/ScheduleIcon.png");
+    background-image: url("../Images/ScheduleIcon.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
