--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/Lists.css
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/Lists.css
@@ -1,8 +1,9 @@
 ﻿#container {
     height: 100%;
+    box-sizing: border-box;
     padding: 5px;
     display: grid;
-    grid-template-rows: 40px 40px auto auto;
+    grid-template-rows: 40px 40px 75% auto;
     align-items: center;
 }
 
@@ -24,10 +25,11 @@
 .sortingMenu {
     width: 100%;
     height: 30px;
+    box-sizing: border-box;
+    padding: 0 15px 0 0;
     display: flex;
     justify-content: space-between;
     color: #d3d3d3;
-    background-color: #4C6674;
 }
 
     .sortingMenu > div {
@@ -35,6 +37,7 @@
         line-height: 30px;
         padding-left: 5px;
         border-right: 2px solid #F0F0F0;
+        background-color: #4C6674;
     }
 
         .sortingMenu > div:hover {
@@ -42,14 +45,17 @@
         }
 
     .sortingMenu div:last-child {
+        width:30%;
         border-right: none;
     }
 
-.list{
+.list {
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items:flex-start;
+    align-items: flex-start;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .entity {
@@ -74,5 +80,20 @@
         pointer-events: auto;
     }
     .entity div:last-child {
+        width: 50px;
         border-right: none;
+    }
+
+.editBtn {
+    background-color: white;
+    color: black;
+    height:auto;
+    width:auto;
+    text-decoration: none;
+}
+
+    .editBtn:focus,
+    .editBtn:hover {
+        background-color: gray;
+        color: black;
     }
