--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/site.css
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/site.css
@@ -3,25 +3,20 @@
     src: url('../Fonts/OpenSans.ttf');
 }
 
-
-
 html {
     font-size: 14px;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
+
 
 html {
-  position: relative;
-  min-height: 100%;
+  position:relative;
+  height: 100%;
+  width:100%;
 }
 
 body {
-  margin-bottom: 60px;
+  margin-bottom: 0px;
 }
 
 * {
@@ -31,13 +26,9 @@ body {
     font-family: OpenSans;
 }
 
-html {
-    height: 100%;
-}
-
 body {
     display: flex;
-    min-height: 100%;
+    height: 100%;
 }
 
 nav {
@@ -77,7 +68,7 @@ nav {
     width: 100%;
     display: grid;
     grid-template-columns: 10px auto;
-    grid-template-rows: 40px auto;
+    grid-template-rows: 40px calc(100vh - 40px);
 }
 
 .border {
@@ -99,3 +90,4 @@ main {
     align-items: center;
     font-size: 48px;
 }
+
