--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/UnavailabilitySchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/Pages/UnavailabilitySchedule.cshtml
@@ -10,10 +10,10 @@
     <div class="navigation">
         <form method="post">
             @{
-                if (DateTime.Now.CompareTo(new DateTime(Model.year, Model.month, 1))>0)
+                if (DateTime.Now.CompareTo(new DateTime(Model.year, Model.month, 1)) > 0)
                 {
                     <button disabled>&#60;</button>
-                    
+
                 }
                 else
                 {
@@ -31,7 +31,7 @@
     <form method="post" class="month">
         @foreach (var x in Model._generator.days)
         {
-            if(x.Month != -1)
+            if (x.Month != -1)
             {
                 //if (Model.schedule[i][j] != null && Model.schedule[i][j].timeBlockId == j)
                 //{
@@ -39,13 +39,13 @@
                 //}
                 //else
                 //{
-                if(@Model.unavailabilityList.Where(p => p.Date.Day == x.Day).ToList().Any())
+                if (@Model.unavailabilityList.Where(p => p.Date.Day == x.Day).ToList().Any())
                 {
-                    <button asp-page-handler="delete" asp-route-month="@Model.month" asp-route-year="@Model.year" asp-route-create="@x.Day.ToString()" class="dayOfMonth unavailable">@x.Day.ToString()</button>
+                    <button asp-page-handler="delete" asp-route-month="@Model.month" asp-route-year="@Model.year" asp-route-day="@x.Day.ToString()" class="dayOfMonth unavailable">@x.Day.ToString()</button>
                 }
                 else
                 {
-                    <button asp-page-handler="create" asp-route-month="@Model.month" asp-route-year="@Model.year" asp-route-create="@x.Day.ToString()" class="dayOfMonth">@x.Day.ToString()</button>
+                    <button asp-page-handler="create" asp-route-month="@Model.month" asp-route-year="@Model.year" asp-route-day="@x.Day.ToString()" class="dayOfMonth">@x.Day.ToString()</button>
                 }
                 //}
             }
@@ -56,5 +56,6 @@
         }
     </form>
     <div class="actionPanel">
+        @Model.amountOfUnavailableDays / @Model.maxAmountOfUnavailableDays
     </div>
 </div>
