--- a/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/EmployeeSchedule.css
+++ b/ZooBazaar_Solution/ZooBazaar_ASP_NET/wwwroot/css/EmployeeSchedule.css
@@ -7,7 +7,8 @@
 .navigation {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 .navigation button {
     padding: 0 5px;
