--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/Shared/_Layout.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
         <a asp-page="EmployeeList" class="icon">
 
         </a>
+        <a asp-page="StaticSchedule" class="icon">
+
+        </a>
     </nav>
     <div class="panel">
         <div class="border"></div>
