--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/StaticSchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/StaticSchedule.cshtml
@@ -10,18 +10,18 @@
     <div class="navigation">
         <form method="post">
             @{
-                if (DateTime.Now.CompareTo(new DateTime(Model.year, Model.month, 1)) > 0)
+                if (DateTime.Now.CompareTo(new DateTime(Model.year, Model.month, Model.day)) > 0)
                 {
                     <button disabled>&#60;</button>
 
                 }
                 else
                 {
-                    <button asp-page-handler="previous" asp-route-weekNumber="@(Model.weekNumber-1)" asp-route-day="@(Model.day-7)">&#60;</button>
+                    <button asp-page-handler="previous" asp-route-weekNumber="@(Model.weekNumber)" asp-route-day="@(Model.day)" asp-route-month="@(Model.month)" asp-route-year="@Model.year">&#60;</button>
                 }
             }
             <button asp-page-handler="today">Today</button>
-            <button asp-page-handler="next" asp-route-weekNumber="@(Model.weekNumber+1)" asp-route-day="@(Model.day+7)">></button>
+            <button asp-page-handler="next" asp-route-weekNumber="@(Model.weekNumber)" asp-route-day="@(Model.day)" asp-route-month="@(Model.month)" asp-route-year="@Model.year">></button>
         </form>
 
     </div>
