--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/StaticSchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/StaticSchedule.cshtml
@@ -6,26 +6,7 @@
     ViewData["Css"] = "~/css/StaticSchedule.css";
 }
 
-<div id="container">
-    <div class="navigation">
-        <form method="post">
-            @{
-                if (DateTime.Now.CompareTo(new DateTime(Model.year, Model.month, Model.day)) > 0)
-                {
-                    <button disabled>&#60;</button>
-
-                }
-                else
-                {
-                    <button asp-page-handler="previous" asp-route-weekNumber="@(Model.weekNumber)" asp-route-day="@(Model.day)" asp-route-month="@(Model.month)" asp-route-year="@Model.year">&#60;</button>
-                }
-            }
-            <button asp-page-handler="today">Today</button>
-            <button asp-page-handler="next" asp-route-weekNumber="@(Model.weekNumber)" asp-route-day="@(Model.day)" asp-route-month="@(Model.month)" asp-route-year="@Model.year">></button>
-        </form>
-
-    </div>
-    <div class="week">Week @Model.weekNumber </div>
+<form method="post" id="container">
     <div class="weekDays">
         <div>Mon <br /> @Model.firstDayOfWeek.ToString()</div>
         <div>Tue <br /> @Model.firstDayOfWeek.AddDays(1).ToString()</div>
@@ -35,7 +16,7 @@
         <div>Sat <br /> @Model.firstDayOfWeek.AddDays(5).ToString()</div>
         <div>Sun <br /> @Model.firstDayOfWeek.AddDays(6).ToString()</div>
     </div>
-    <form method="post" class="schedule">
+    <div class="schedule">
         @{
             <div>
             @{
@@ -64,8 +45,9 @@
                 </div>
             }
         }
-    </form>
-    <div class="actionPanel">
-
     </div>
-</div>
+    <div class="actionPanel">
+        <label type="text" asp-for="@Model.taskName">New Task Name:</label>
+        <input type="text" asp-for="@Model.taskName" required/>
+    </div>
+</form>
