--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/EmployeeAdd.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/EmployeeAdd.cshtml
@@ -18,25 +18,25 @@
 
 
             <label for="Name">Name</label>
-            <input id="Name">
+            <input asp-for="employeeDTO.FirstName" id="Name">
 
 
             <label for="LastName">Last Name</label>
-            <input id="LastName">
+            <input asp-for="employeeDTO.LastName" id="LastName">
 
 
             <label for="Email">Email</label>
-            <input id="Email">
+            <input asp-for="employeeDTO.Email" id="Email">
 
 
             <label for="Phone">Phone</label>
-            <input id="Phone">
+            <input asp-for="employeeDTO.Phone" id="Phone">
 
             <label for="Adress">Adress</label>
-            <input id="Adress">
+            <input asp-for="employeeDTO.Address"  id="Adress">
 
             <label for="Role">Role</label>
-            <input id="Role">
+            <input asp-for="employeeDTO.Role" id="Role">
 
 
 
