--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/EmployeeList.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/EmployeeList.cshtml
@@ -42,7 +42,7 @@
                     </div>
                     <div>
                         <div class="Button">
-                            <a type="button" asp-page="./EmployeeDetails" class="editBtn"> . . .</a>
+                            <a type="button" asp-page="./EmployeeDetails" asp-route-postId="@employee.ID" class="editBtn"> . . .</a>
                         </div>
                     </div>
 
