--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/StaticSchedule.cshtml
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/Pages/StaticSchedule.cshtml
@@ -35,7 +35,7 @@
                 {
                     if(Model.schedule[i][j] != null && Model.schedule[i][j].timeBlockId == j)
                     {
-                        <button asp-page-handler="Delete" asp-route-weekDay="@i" asp-route-timeBlock="@j" formnovalidate class="timeBlock">@Model.schedule[i][j].taskName - @Model.schedule[i][j].taskHabitat</button>
+                        <button asp-page-handler="Delete" asp-route-weekDay="@i" asp-route-timeBlock="@j" formnovalidate class="timeBlock">@Model.schedule[i][j].taskName - @Model.schedule[i][j].taskHabitat - @Model.schedule[i][j].EmployeesNeeded</button>
                     }
                     else
                     {
@@ -59,6 +59,16 @@
 
         <label type="text">Habitat:</label>
         <select required asp-for="@Model.habitatID" asp-items=@Model.Habitats>
+        </select>
+
+        <label type="text">Employees Needed:</label>
+        <select asp-for="@Model.employeesNeeded">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
         </select>
     </div>
 </form>
