--- a/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/ManualSchedule.css
+++ b/ZooBazaar_Solution/ZooBazaar_Desktop_App/wwwroot/css/ManualSchedule.css
@@ -82,42 +82,33 @@
         background-color: #4C6674;
         cursor: pointer;
     }
-.context-menu {
+
+/* CSS3 */
+
+/* The whole thing */
+.custom-menu {
+    display: none;
+    z-index: 1000;
     position: absolute;
+    overflow: hidden;
+    border: 1px solid #CCC;
+    white-space: nowrap;
+    font-family: sans-serif;
+    background: #FFF;
+    color: #333;
+    border-radius: 5px;
+    padding: 0;
 }
 
-.menu {
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px rgb(64 64 64 / 5%);
-    padding: 10px 0;
-}
-
-    .menu > li > a {
-        font: inherit;
-        border: 0;
-        padding: 10px 30px 10px 15px;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        position: relative;
-        text-decoration: unset;
-        color: #000;
-        font-weight: 500;
-        transition: 0.5s linear;
-        -webkit-transition: 0.5s linear;
-        -moz-transition: 0.5s linear;
-        -ms-transition: 0.5s linear;
-        -o-transition: 0.5s linear;
+    /* Each of the items in the list */
+    .custom-menu li {
+        padding: 8px 12px;
+        cursor: pointer;
+        list-style-type: none;
+        transition: all .3s ease;
+        user-select: none;
     }
 
-        .menu > li > a:hover {
-            background: #f1f3f7;
-            color: #4b00ff;
-        }
-
-        .menu > li > a > i {
-            padding-right: 10px;
+        .custom-menu li:hover {
+            background-color: #DEF;
         }
